ethereum-deployment/ethereum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ethereum
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  #enable SSL redirect
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ethblock.gm-nig-ltd.tech
    secretName: harbor-tls-ingress # must match the name of the certificate secretName we issue
  rules:
  - host: ethblock.gm-nig-ltd.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ethstats 
            port:
              number: 3000  # port pointing to the port on the service and not the targetPort
